new notebooks for facenet

--- a/notebooks/yolo4_cv2.ipynb
+++ b/notebooks/yolo4_cv2.ipynb
@@ -9,14 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import cv2\n",
     "# import torch\n",
     "import numpy as np\n",
-    "# from art import tprint\n",
+    "import matplotlib.pyplot as plt\n",
     "from torchvision.transforms.functional import to_pil_image"
    ]
   },
@@ -200,7 +200,8 @@
     "\n",
     "image = cv2.imread('../data/images/0je5b4V4MQ0_1.jpg')\n",
     "result = apply_yolo_object_detection(net, image)\n",
-    "to_pil_image(result)"
+    "plt.imshow(cv2.cvtColor(result, cv2.COLOR_BGR2RGB))\n",
+    "# to_pil_image(result)"
    ]
   },
   {
