facenet notebooks update

--- a/notebooks/torch_facenet.ipynb
+++ b/notebooks/torch_facenet.ipynb
@@ -10,28 +10,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running on device: cuda:0\n"
+      "Running on device: cpu\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/alexander/Documents/Programming/ObjectDetection/.venv/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
    ],
    "source": [
-    "from facenet_pytorch import MTCNN, InceptionResnetV1\n",
     "import torch\n",
-    "from torch.utils.data import DataLoader\n",
-    "from torchvision import datasets\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import os\n",
     "import cv2\n",
     "from PIL import Image\n",
     "from matplotlib import pyplot as plt\n",
+    "from torch.utils.data import DataLoader\n",
+    "from torchvision import datasets\n",
+    "from facenet_pytorch import MTCNN, InceptionResnetV1\n",
     "from tqdm import tqdm\n",
     "# from tqdm.notebook import tqdm\n",
     "\n",
@@ -1188,7 +1196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1201,16 +1209,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 107M/107M [00:05<00:00, 19.9MB/s] \n"
+     ]
+    }
+   ],
    "source": [
     "resnet = InceptionResnetV1(pretrained='vggface2').eval().to(device)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1224,7 +1240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1232,9 +1248,9 @@
      "output_type": "stream",
      "text": [
       "Face detected with probability: 0.999983\n",
-      "Face detected with probability: 0.999936\n",
+      "Face detected with probability: 0.999934\n",
       "Face detected with probability: 0.999733\n",
-      "Face detected with probability: 0.999880\n",
+      "Face detected with probability: 0.999876\n",
       "Face detected with probability: 0.999992\n",
       "['angelina_jolie', 'bradley_cooper', 'kate_siegel', 'paul_rudd', 'shea_whigham']\n"
      ]
@@ -1254,7 +1270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1264,7 +1280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1273,7 +1289,7 @@
        "torch.Size([5, 512])"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1284,19 +1300,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "             test_images  test_images  test_images  test_images  test_images\n",
-      "test_images     0.000000     1.447700     0.887742     1.430940     1.399109\n",
-      "test_images     1.447700     0.000000     1.314568     1.013767     1.038779\n",
-      "test_images     0.887742     1.314568     0.000000     1.389252     1.379683\n",
-      "test_images     1.430940     1.013767     1.389252     0.000000     1.100879\n",
-      "test_images     1.399109     1.038779     1.379683     1.100879     0.000000\n"
+      "                angelina_jolie  bradley_cooper  kate_siegel  paul_rudd  \\\n",
+      "angelina_jolie        0.000000        1.447480     0.887728   1.434377   \n",
+      "bradley_cooper        1.447480        0.000000     1.313749   1.011981   \n",
+      "kate_siegel           0.887728        1.313749     0.000000   1.388992   \n",
+      "paul_rudd             1.434377        1.011981     1.388992   0.000000   \n",
+      "shea_whigham          1.399073        1.038684     1.379655   1.104095   \n",
+      "\n",
+      "                shea_whigham  \n",
+      "angelina_jolie      1.399073  \n",
+      "bradley_cooper      1.038684  \n",
+      "kate_siegel         1.379655  \n",
+      "paul_rudd           1.104095  \n",
+      "shea_whigham        0.000000  \n"
      ]
     }
    ],
