a few new ntbks with alternatives

--- a/notebooks/torch_fasterrcnn_resnet50.ipynb
+++ b/notebooks/torch_fasterrcnn_resnet50.ipynb
@@ -186,6 +186,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# classification_models = list_models(module=torchvision.models)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from torchvision.models.segmentation import fcn_resnet50, FCN_ResNet50_Weights\n",
     "\n",
     "weights = FCN_ResNet50_Weights.DEFAULT\n",
